# Enhancing-PINN-Based-Inverse-Modeling-of-the-Nonlinear-Pendulum

./: .gitignore  .pre-commit-config.yaml  Makefile  PUSH_TO_GITHUB.md  QUALITY_GUARDRAILS.md  README.md  SETUP_COMPLETE.md  pyproject.toml  requirements.txt
outputs/: FINAL_STUDY.md  README_run.txt
outputs/baseline/: metrics.csv
outputs/ensemble/20251109_162312/: parameter_metrics.csv  parameter_values.csv  trajectory_coverage.csv
outputs/inverse_no_pass/: comparison.csv
outputs/mini_grid/: summary.csv
scripts/: generate_final_study.py  monitor_progress.sh  run_all.sh  run_pipeline_live.sh
src/: __init__.py
src/analysis/: __init__.py  metrics.py  tables_figs.py
src/baseline/: __init__.py  linear_small_angle.py  nonlinear_rk.py  plots.py  plots_baseline.py
src/configs/: config_loader.py  default.yaml
src/data/: __init__.py  generator.py  utils.py
src/experiments/: __init__.py  demo_plots.py  exp_baseline.py  exp_inverse_ens.py  exp_inverse_single.py  grids.py  run_ablations.py  run_grid.py  test_config.py
src/models/: __init__.py  dissipation_net.py  ensemble.py  losses.py  pinn_inverse.py  train_inverse.py
src/tests/: __init__.py  test_data.py  test_losses.py  test_metrics.py  test_models.py
src/viz/: __init__.py  style.py
